Adds dev infos and rearranges help

--- a/developers/index.html
+++ b/developers/index.html
@@ -91,6 +91,17 @@ title: "GeoKey – For Developers"
                         <p>This website is a Git repository. Fork it to help us improve GeoKey's documentation.</p>
                     </li>
                 </ul>
+
+                <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="/help/data-model.html">Data model</a></h6>
+                        <p>Learn about the data model of GeoKey.</p>
+                    </li>
+                    <li>
+                        <h6><a href="/help/code-structure.html">Platform Code Structure</a></h6>
+                        <p>Find out where you can find the correct files to change things in the code base.</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
