--- a/help/index.html
+++ b/help/index.html
@@ -13,55 +13,23 @@ title: "Help"
 <section class="getting-started">
     <div class="container">
         <div class="row">
-            <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-milestone"></span> <a href="/help/getting-started.html">Getting started</a></h2>
-                <p>Get to know GeoKey and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
+            <h2 class="col-sm-12"><i class="fa fa-rocket fa-lg"></i> The Basics</h2>
+            <div class="col-sm-4">
+                <p>Start here if you want to read about the basics of GeoKey.</p>
             </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-puzzle"></span> Setting up projects</h2>
+            <div class="col-sm-8">
                 <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="/help/what-is-geokey.html">What is Geokey</a></h6>
+                        <p>A basic introduction to the features of GeoKey.</p>
+                    </li>
+                    <li>
+                        <h6><a href="/help/getting-started.html">Getting started</a></h6>
+                        <p>Projects, Categories, data groupings — Learn about the basic concepts of GeoKey.</p>
+                    </li>
                     <li>
                         <h6><a href="how-to-create-project.html">How to create a new project</a></h6>
-                        <p>Projects are you starting point. Learn how to set up a mapping project for your community.</p>
-                    </li>
-                    <li>
-                        <h6><a href="how-to-setup-categories.html">How to setup categories for data collection</a></h6>
-                        <p>Categories are your frame for data collection. You create one category for each data type.</p>
-                    </li>
-                    <li>
-                        <h6><a href="how-to-create-field.html">How to create fields for a category</a></h6>
-                        <p>Add fields to your categories to define information you want to collect.</p>
-                    </li>
-                    <li>
-                        <h6><a href="how-users-access-data.html">How users can access the data in your project</a></h6>
-                        <p>Learn how to set up data groupings and user groups to define who can access your data.</p>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-tools"></span> Managing projects</h2>
-                <ul class="tutorial-links">
-                    <li>
-                        <h6><a href="category-display-settings.html">Category display settings</a></h6>
-                        <p>Define how your contributions will be displayed on the map.</p>
-                    </li>
-                    <li>
-                        <h6><a href="field-types.html">Field types</a></h6>
-                        <p>Learn about different field types and what you can do with them.</p>
-                    </li>
-                    <li>
-                        <h6><a href="add-remove-users.html">Add and remove users to and from user groups</a></h6>
-                    </li>
-                    <li>
-                        <h6><a href="granting-permissions-to-usergroups.html">Granting permissions to user groups</a></h6>
+                        <p>Projects are your starting point. Learn how to set up a mapping project for your community.</p>
                     </li>
                 </ul>
             </div>
@@ -69,76 +37,40 @@ title: "Help"
     </div>
 </section>
 
-<section>
+<section class="getting-started">
     <div class="container">
         <div class="row">
+            <h2 class="col-sm-12"><i class="fa fa-check-circle-o fa-lg"></i> Topics</h2>
             <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-person"></span> User settings</h2>
-                <ul class="tutorial-links">
-                    <li>
-                        <h6><a href="notification-settings.html">Notification settings</a></h6>
-                        <p>Define about what you want to notified.</p>
-                    </li>
+                <h3>Managing projects</h3>
+                <ul class="topics">
+                    <li><a href="/help/faq-active-inactive-projects.html">What's the difference between active and archived projects?</a></li>
+                    <li><a href="how-to-setup-categories.html">How to setup categories for data collection</a></li>
+                    <li><a href="how-to-create-field.html">How to create fields for a category</a></li>
+                    <li><a href="how-users-access-data.html">How users can access the data in your project</a></li>
+                    <li><a href="category-display-settings.html">Category display settings</a></li>
+                    <li><a href="/help/faq-active-inactive-categories-fields.html">What's the difference between active and inactive categories and fields?</a></li>
+                    <li><a href="field-types.html">Field types</a></li>
+                    <li><a href="add-remove-users.html">Add and remove users to and from user groups</a></li>
+                    <li><a href="granting-permissions-to-usergroups.html">Granting permissions to user groups</a></li>
                 </ul>
             </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container">
-        <div class="row">
             <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-question"></span> Frequently asked questions</h2>
-                <ul class="tutorial-links">
-                    <li>
-                        <h6><a href="/help/faq-active-inactive-projects.html">What's the difference between active and archived projects?</a></h6>
-                    </li>
-                    <li>
-                        <h6><a href="/help/faq-active-inactive-categories-fields.html">What's the difference between active and inactive categories and fields?</a></h6>
-                    </li>
+                <h3>User settings</h3>
+                <ul class="topics">
+                    <li><a href="notification-settings.html">Notification settings</a></li>
                 </ul>
-            </div>
-        </div>
-    </div>
-</section>
 
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-gear"></span> Running GeoKey on your own servers</h2>
-                <ul class="tutorial-links">
-                    <li>
-                        <h6><a href="/help/how-to-install.html">How to install</a></h6>
-                        <p>A complete guide to installing GeoKey on a Debian system with Apache and mod_wsgi.</p>
-                    </li>
-                    <li>
-                        <h6><a href="/help/vagrant.html">Setup a development environment</a></h6>
-                        <p>Learn how to setup your personal development enviroment in just under 10 minutes.</p>
-                    </li>
-                    <li>
-                        <h6><a href="/help/how-to-update.html">How to update</a></h6>
-                        <p>How to update the system to the latest version</p>
-                    </li>
+                <h3>Running GeoKey</h3>
+                <ul class="topics">
+                    <li><a href="/help/how-to-install.html">How to install</a></li>
+                    <li><a href="/help/how-to-update.html">How to update</a></li>
                 </ul>
-            </div>
 
-            <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-code"></span> Building an app using the API</h2>
-                <ul class="tutorial-links">
-                    <li>
-                        <h6><a href="/help/register-your-app.html">Register your app</a></h6>
-                        <p>Before you can use our API you need to register your app.</p>
-                    </li>
-                    <li>
-                        <h6><a href="/help/getting-started-with-oauth.html">Getting started with OAuth</a></h6>
-                        <p>Learn how to obtain OAuth tokens and how to sign your request to authenticate and authorise users.</p>
-                    </li>
-                    <li>
-                        <h6><a href="/docs/">Read the API docs</a></h6>
-                        <p>Find out which API endpoints to use to get information on projects and how to add, read and update contributions.</p>
-                    </li>
+                <h3>Develop an app</h3>
+                <ul class="topics">
+                    <li><a href="/help/register-your-app.html">Register your app</a></li>
+                    <li><a href="/help/getting-started-with-oauth.html">Getting started with OAuth</a></li>
                 </ul>
             </div>
         </div>
