--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Home
                     <li><i class="fa fa-comments-o fa-fw fa-lg"></i> Discuss</li>
                 </ul>
 
-                <p><a href="/communities/" class="btn">Start mapping today</a></p>
+                <p><a href="/collect/" class="btn">Start mapping today</a></p>
             </div>
         </div>
     </div>
