--- a/developers/index.html
+++ b/developers/index.html
@@ -7,7 +7,7 @@ title: "GeoKey – For Developers"
     {% include nav.html %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-8">
+            <div class="col-sm-10 col-md-8">
                 <h1>Developers</h1>
                 <p>GeoKey is 100% open source. You can deploy it on your own servers, extend it or build an app on top of the API.</p>
             </div>
