How does GeoKey work

--- a/help/index.html
+++ b/help/index.html
@@ -24,7 +24,7 @@ title: "Help"
                         <p>A basic introduction to the features of GeoKey.</p>
                     </li>
                     <li>
-                        <h6><a href="/help/getting-started.html">Getting started</a></h6>
+                        <h6><a href="/help/how-does-geokey-work.html">How does GeoKey work</a></h6>
                         <p>Projects, Categories, data groupings — Learn about the basic concepts of GeoKey.</p>
                     </li>
                     <li>
