--- a/collect/index.html
+++ b/collect/index.html
@@ -58,7 +58,7 @@ title: "GeoKey – Collect data"
                         <p>A basic introduction to the features of GeoKey.</p>
                     </li>
                     <li>
-                        <h6><a href="/help/getting-started.html">Getting started</a></h6>
+                        <h6><a href="/help/how-does-geokey-work.html">How does GeoKey work</a></h6>
                         <p>Projects, Categories, data groupings — Learn about the basic concepts of GeoKey.</p>
                     </li>
                     <li>
