Adds Epicollect info

--- a/collect/index.html
+++ b/collect/index.html
@@ -15,7 +15,7 @@ title: "GeoKey – Collect data"
     </div>
 </header>
 
-<section>
+<section class="apps">
     <div class="collect-app">
         <div class="illustration">
             <img src="img/community-maps.png">
@@ -32,12 +32,15 @@ title: "GeoKey – Collect data"
         </div>
     </div>
     <div class="collect-app">
+        <div class="illustration">
+            <img src="img/epicollect.png">
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h3>EpiCollect</h3>
-                    <p>EpiCollect is a smart phone application to collect geographic data. Use the <a href="https://github.com/ExCiteS/geokey-epicollect">EpiCollect plug-in</a> to enable data collection with EpiCollect in GeoKey.</p>
-                    <p>Currently, EpiCollect is only available for Android phones.</p>
+                    <h3>EpiCollect+</h3>
+                    <p><a href="http://www.epicollect.net/">EpiCollect+</a> is a smart phone application to collect geographic data. It is currently available available for Android phones only, but an iPhone version is in development. </p>
+                    <p>Use the <a href="https://github.com/ExCiteS/geokey-epicollect">EpiCollect plug-in</a> to enable data collection with EpiCollect in GeoKey.</p>
                 </div>
             </div>
         </div>
