--- a/developers/index.html
+++ b/developers/index.html
@@ -72,6 +72,25 @@ title: "GeoKey – For Developers"
 <section>
     <div class="container">
         <div class="row">
+            <h2 class="col-sm-12"><i class="fa fa-plug fa-lg"></i> Build an extension</h2>
+            <div class="col-sm-4">
+                <p>Add custom functionality to GeoKey by creating an extenstion.</p>
+            </div>
+            <div class="col-sm-8">
+                <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="/help/how-to-create-an-extension.html">How to create an extension</a></h6>
+                        <p>Learn what you need to do in order to build an extenstion.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
             <h2 class="col-sm-12"><i class="fa fa-code-fork fa-lg"></i> Help us to improve GeoKey</h2>
             <div class="col-sm-4">
                 <p>GeoKey is open-source. Help us to improve GeoKey by implementing new features or file and fix bugs.</p>
