--- a/collect/index.html
+++ b/collect/index.html
@@ -24,7 +24,7 @@ title: "GeoKey – Collect data"
             <div class="row">
                 <div class="col-sm-6">
                     <h3>EpiCollect+</h3>
-                    <p><a href="http://www.epicollect.net/">EpiCollect+</a> is a smart phone application to collect geographic data. It is currently available available for Android phones only, but an iPhone version is in development. </p>
+                    <p><a href="http://www.epicollect.net/">EpiCollect+</a> is a smart phone application to collect geographic data. It is currently available for Android phones only, but an iPhone version is in development. </p>
                     <p>Use the <a href="https://github.com/ExCiteS/geokey-epicollect">EpiCollect plug-in</a> to enable data collection with EpiCollect in GeoKey.</p>
                 </div>
             </div>
