Link EpiCollect guide

--- a/collect/index.html
+++ b/collect/index.html
@@ -26,6 +26,13 @@ title: "GeoKey – Collect data"
                     <h3>EpiCollect+</h3>
                     <p><a href="http://www.epicollect.net/">EpiCollect+</a> is a smart phone application to collect geographic data. It is currently available for Android phones only, but an iPhone version is in development. </p>
                     <p>Use the <a href="https://github.com/ExCiteS/geokey-epicollect">EpiCollect plug-in</a> to enable data collection with EpiCollect in GeoKey.</p>
+
+                    <ul class="tutorial-links">
+                        <li>
+                            <h6><a href="/help/epicollect.html">Use EpiCollect for data collection</a></h6>
+                            <p>Learn how to enable your project for EpiCollect.</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
