Slight design update

--- a/collect/index.html
+++ b/collect/index.html
@@ -29,7 +29,11 @@ title: "GeoKey – Collect data"
 
                     <ul class="tutorial-links">
                         <li>
-                            <h6><a href="/help/epicollect.html">Use EpiCollect for data collection</a></h6>
+                            <h6><a href="/help/ext-epicollect-install.html">How to setup EpiCollect for GeoKey</a></h6>
+                            <p>Learn how to install and setup the EpiCollect extension.</p>
+                        </li>
+                        <li>
+                            <h6><a href="/help/ext-epicollect-use.html">Use EpiCollect for data collection</a></h6>
                             <p>Learn how to enable your project for EpiCollect.</p>
                         </li>
                     </ul>
