First draft internal API docs

--- a/developers/index.html
+++ b/developers/index.html
@@ -15,17 +15,40 @@ title: "GeoKey – For Developers"
     </div>
 </header>
 
-<section>
+<section class="getting-started">
     <div class="container">
         <div class="row">
-            <h2 class="col-sm-12"><i class="fa fa-code fa-lg"></i> Develop an application on top of the API</h2>
+            <h2 class="col-sm-12"><i class="fa fa-rocket fa-lg"></i> The Basics</h2>
             <div class="col-sm-4">
-                <p>Whether you want to build a smart phone app to collect data, visualise your data on a web map or want to build a bridge to your GIS — the REST API provides access to all information you need.</p>
+                <p>Start here if you want to read about the basics of GeoKey.</p>
             </div>
             <div class="col-sm-8">
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="/docs/">Read the API docs</a></h6>
+                        <h6><a href="/help/what-is-geokey.html">What is Geokey</a></h6>
+                        <p>A basic introduction to the features of GeoKey.</p>
+                    </li>
+                    <li>
+                        <h6><a href="/help/how-does-geokey-work.html">How does GeoKey work</a></h6>
+                        <p>Projects, Categories, data groupings — Learn about the basic concepts of GeoKey.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <h2 class="col-sm-12"><i class="fa fa-globe fa-lg"></i> Develop an application on top of the Web API</h2>
+            <div class="col-sm-4">
+                <p>Whether you want to build a smart phone app to collect data, visualise your data on a web map or want to build a bridge to your GIS — the Web API provides access to all information you need.</p>
+            </div>
+            <div class="col-sm-8">
+                <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="/docs/web-api.html">Read the API docs</a></h6>
                         <p>Find out which API endpoints to use to get information on projects and how to add, read and update contributions.</p>
                     </li>
                     <li>
