Link up programmatic API endpoints

--- a/developers/index.html
+++ b/developers/index.html
@@ -95,12 +95,24 @@ title: "GeoKey – For Developers"
 <section>
     <div class="container">
         <div class="row">
-            <h2 class="col-sm-12"><i class="fa fa-plug fa-lg"></i> Build an extension</h2>
+            <h2 class="col-sm-12"><i class="fa fa-plug fa-lg"></i> Extend GeoKey</h2>
             <div class="col-sm-4">
-                <p>Add custom functionality to GeoKey by creating an extenstion.</p>
+                <p>Add functionality to GeoKey or create a custom extenstion.</p>
             </div>
             <div class="col-sm-8">
                 <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="/help/data-model.html">Data model</a></h6>
+                        <p>Learn about the data model of GeoKey.</p>
+                    </li>
+                    <li>
+                        <h6><a href="/help/code-structure.html">Platform Code Structure</a></h6>
+                        <p>Find out where you can find the correct files to change things in the code base.</p>
+                    </li>
+                    <li>
+                        <h6><a href="/docs/programming-api.html">Explore the programming API.</a></h6>
+                        <p>Find out how to use the </p>
+                    </li>
                     <li>
                         <h6><a href="/help/how-to-create-an-extension.html">How to create an extension</a></h6>
                         <p>Learn what you need to do in order to build an extenstion.</p>
@@ -131,17 +143,6 @@ title: "GeoKey – For Developers"
                     <li>
                         <h6><a href="https://github.com/ExCiteS/geokey-website">Improve the documentation and tutorials</a></h6>
                         <p>This website is a Git repository. Fork it to help us improve GeoKey's documentation.</p>
-                    </li>
-                </ul>
-
-                <ul class="tutorial-links">
-                    <li>
-                        <h6><a href="/help/data-model.html">Data model</a></h6>
-                        <p>Learn about the data model of GeoKey.</p>
-                    </li>
-                    <li>
-                        <h6><a href="/help/code-structure.html">Platform Code Structure</a></h6>
-                        <p>Find out where you can find the correct files to change things in the code base.</p>
                     </li>
                 </ul>
             </div>
