Few minor fixes

--- a/developers/index.html
+++ b/developers/index.html
@@ -84,7 +84,7 @@ title: "GeoKey – For Developers"
                     </li>
                     <li>
                         <h6><a href="/help/how-to-update.html">How to update</a></h6>
-                        <p>How to update the system to the latest version</p>
+                        <p>How to update the system to the latest version.</p>
                     </li>
                 </ul>
             </div>
@@ -111,7 +111,7 @@ title: "GeoKey – For Developers"
                     </li>
                     <li>
                         <h6><a href="/docs/programming-api.html">Explore the programming API.</a></h6>
-                        <p>Find out how to use the </p>
+                        <p>Find out how to use the GeoKey.</p>
                     </li>
                     <li>
                         <h6><a href="/help/how-to-create-an-extension.html">How to create an extension</a></h6>
